--- a/R-CodeBoxes.ipynb
+++ b/R-CodeBoxes.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Untitled0.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/migariane/DeltaMethodInfluenceFunction/blob/main/R-CodeBoxes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -33,8 +45,9 @@
         "\n",
         "### Authors\n",
         "\n",
-        "Rodrigo Zepeda-Tello 1| Michael Schomaker 2,3| Aurelien Belot 4| Camille Maringe 4| Mathew Smith 4| Bernard Rachet 4| Mireille E.Schnitzer 5,6| Miguel Angel Luque Fernandez*4,7,8\n",
-        "Affiliations\n",
+        "Rodrigo Zepeda-Tello 1| Michael Schomaker 2,3| Aurelien Belot 4| Camille Maringe 4| Mathew Smith 4| Bernard Rachet 4| Mireille E.Schnitzer 5,6| Miguel Angel Luque Fernandez* 4,7  \n",
+        "\n",
+        "Affiliations  \n",
         "\n",
         "  1. Instituto Mexicano del Seguro Social, Mexico.\n",
         "  2. Institute of Public Health, Medical Decision Making and Health Technology Assessment Department of Public Health, Health Services Research and Health Technology Assessment UMIT - University for Health Sciences, Medical Informatics and Technology, Austria.\n",
@@ -73,7 +86,7 @@
         },
         "outputId": "eff2108c-3b00-4bb5-fd92-7bb23680766c"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,7 +153,7 @@
         "id": "LsnaFsorAw3Y",
         "outputId": "ec43ad9f-fde4-4f26-e7b0-910919cb8922"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -166,126 +179,6 @@
       "metadata": {
         "id": "TnbQw0YbCHQe"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%R\n",
-        "# Data generation\n",
-        "# install.packages('mvtnorm')\n",
-        "library(mvtnorm)\n",
-        "set.seed(123)\n",
-        "\n",
-        "data  <- as.data.frame(rmvnorm(1000, c(3,4), matrix(c(1,0.3,0.3,2), ncol = 2)))\n",
-        "colnames(data) <- c(\"X\",\"Y\")\n",
-        "\n",
-        "data <- as.data.frame(data)\n",
-        "attach(data)\n",
-        "\n",
-        "# SE estimation for the ratio: Delta-Method based on the IF\n",
-        "ratio <- mean(X)/mean(Y);mean(ratio)\n",
-        "\n",
-        "\n",
-        "n <- 1000\n",
-        "a <-    (1 / (mean(Y))^2) * var(X) \n",
-        "b <-   ((mean(X))^2 / (mean(Y))^4) * var(Y) \n",
-        "c <-    2 * ((mean(X)) / (mean(Y))^3) * cov(X,Y)\n",
-        "var.IF <- 1/n *(a+b-c); var.IF\n",
-        "\n",
-        "SE <- sqrt(var.IF); SE\n",
-        "\n",
-        "CI = c(mean(ratio)-qnorm(0.975)*SE,mean(ratio)+qnorm(0.975)*SE); mean(ratio); CI\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "m14AeOjdGqj7",
-        "outputId": "d53d82dc-8e38-4ad0-8f4d-a09bb461be0b"
-      },
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "R[write to console]: The following objects are masked _by_ .GlobalEnv:\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from data (pos = 3):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from data (pos = 4):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from data (pos = 5):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from sample (pos = 6):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from sample (pos = 7):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from sample (pos = 8):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from sample (pos = 9):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from sample (pos = 10):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from sample (pos = 11):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from sample (pos = 12):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from sample (pos = 20):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n",
-            "R[write to console]: The following objects are masked from sample (pos = 21):\n",
-            "\n",
-            "    X, Y\n",
-            "\n",
-            "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[1] -8.118949e+15  8.118949e+15\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -348,7 +241,7 @@
         "outputId": "648504da-ee87-4a87-92e9-6e4388a1f7c2",
         "id": "iNcQibH5Yzrg"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +292,7 @@
         "id": "mMfVRrtrF0HV",
         "outputId": "41de3739-2252-4857-a9a9-bd828c891d60"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -465,7 +358,7 @@
           "height": 534
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +460,7 @@
         "id": "8pOQ-pWoHLdD",
         "outputId": "b97fc6f7-e708-4a89-a0c8-e5fd4c65f796"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -623,7 +516,7 @@
         "id": "RbFnkFo-HhVj",
         "outputId": "5404d3e1-5c67-4399-b311-3e65d8eac09d"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,7 +584,7 @@
         "id": "MQQR6JQUH4cD",
         "outputId": "c4281427-e0e9-4672-bae9-d1003660c26a"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,7 +641,7 @@
         "outputId": "e974347d-1c29-48b7-e30d-21aee3127749",
         "id": "-wTUeByvb1Hv"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,7 +689,7 @@
         "outputId": "61ea5efa-0f89-4cf2-ded7-86b69065c159",
         "id": "8NfYF6ZEcGVW"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +747,7 @@
         "outputId": "a2eccebb-cef3-4908-be4d-3284aee7e892",
         "id": "vBNutjnzcOFZ"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -927,7 +820,7 @@
         "outputId": "a16937b2-91ef-4fa5-de62-6828d42d4d85",
         "id": "kNlMTv8UcgbQ"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
