--- a/R-CodeBoxes.ipynb
+++ b/R-CodeBoxes.ipynb
@@ -55,7 +55,7 @@
         "  4. ICON-group. Non-communicable Disease Epidemiology. London School of Hygiene and Tropical Medicine. London, U.K.\n",
         "  5. Faculty of Pharmacy and Department of Social and Preventive Medicine, University of Montreal, Montreal, Canada.\n",
         "  6. Department of Epidemiology, Biostatistics and Occupational Health, McGill University, Montreal, Canada.\n",
-        "  7. Department of Operational Research and Statistics, University of Granada, Granada, Spain.  \n",
+        "  7. Department of Statistics and Operations Research, University of Granada, Granada, Spain.  \n",
         "\n",
         "Correspondence*    \n",
         "Miguel Angel Luque-Fernandez  \n",
