--- a/R-CodeBoxes.ipynb
+++ b/R-CodeBoxes.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/migariane/DeltaMethodInfluenceFunction/blob/main/R-CodeBoxes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -80,23 +69,10 @@
         "%load_ext rpy2.ipython"
       ],
       "metadata": {
-        "id": "-Bx5hZOj_s-P",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "eff2108c-3b00-4bb5-fd92-7bb23680766c"
+        "id": "-Bx5hZOj_s-P"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-            "  %reload_ext rpy2.ipython\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -111,7 +87,7 @@
       "cell_type": "code",
       "source": [
         "%%R \n",
-        "##install.packages('msm')\n",
+        "#install.packages('msm')\n",
         "library(msm)\n",
         "set.seed(7777)\n",
         "n <- 1000\n",
@@ -151,7 +127,7 @@
           "height": 515
         },
         "id": "LsnaFsorAw3Y",
-        "outputId": "ec43ad9f-fde4-4f26-e7b0-910919cb8922"
+        "outputId": "413f5538-abe2-43f0-f1a5-0b5587010bbb"
       },
       "execution_count": null,
       "outputs": [
@@ -205,19 +181,20 @@
         "SE <- sqrt(var.IF); SE\n",
         "\n",
         "CI = c(mean(ratio)-qnorm(0.975)*SE,mean(ratio)+qnorm(0.975)*SE); mean(ratio); CI\n",
+        "# 0.7335113 0.7748440\n",
         "\n",
-        "# Cheking results\n",
-        "# CI Delta method\n",
+        "# Comparing results with Fieller's method\n",
+        "# 95%CI Fieller's method\n",
         "theta1 <- mean(data$X)\n",
         "sd1 <- sd(data$X)\n",
         "theta2 <- mean(data$Y)\n",
         "sd2 <- sd(data$Y)\n",
-        "CI.Delta = function(theta1, sd1,\n",
+        "CI.Fieller = function(theta1, sd1,\n",
         "                     theta2, sd2,# estimate and estimated sd of estimator\n",
         "                     alpha # theoretical coverage (1-alpha)\n",
         " )\n",
         " {\n",
-        "## CI Delta method\n",
+        "## 95%CI Fieller's method\n",
         "## Hirschberg, J., and J. Lye. 2010.\n",
         "## “A Geometric Comparison of the Delta and Fieller Confidence Intervals.”\n",
         "## The American Statistician 64 (3): 234–41\n",
@@ -231,14 +208,15 @@
         "    names(res) = c('R','L','U')\n",
         "    return(res)\n",
         " }\n",
-        "# 95%CI Delta-method\n",
-        "CI.Delta(theta1, sd1, theta2, sd2, 0.95)"
+        "# 95%CI Fieller's method\n",
+        "CI.Fieller(theta1, sd1, theta2, sd2, 0.95)\n",
+        "# Delta-method 95%CI: (0.7335113 0.7748440)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "648504da-ee87-4a87-92e9-6e4388a1f7c2",
+        "outputId": "e6c2dd83-0d69-4820-abbd-0c4130701e8a",
         "id": "iNcQibH5Yzrg"
       },
       "execution_count": null,
